--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mdi/js": "^7.4.47",
+    "@mdi/react": "^1.6.1",
     "bootstrap": "^5.3.8",
     "bootstrap-icons": "^1.13.1",
     "primeicons": "^7.0.0",
     "primereact": "^10.9.7",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "react-router-dom": "^6.23.1",
+    "jwt-decode": "^4.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
