--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
     "@mdi/react": "^1.6.1",
     "bootstrap": "^5.3.8",
     "bootstrap-icons": "^1.13.1",
+    "jwt-decode": "^4.0.0",
+    "leaflet": "^1.9.4",
     "primeicons": "^7.0.0",
     "primereact": "^10.9.7",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-leaflet": "^5.0.0",
     "react-router-dom": "^6.23.1",
-    "jwt-decode": "^4.0.0"
+    "recharts": "^3.5.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
