--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@mdi/js": "^7.4.47",
     "@mdi/react": "^1.6.1",
+    "@nivo/core": "^0.99.0",
+    "@nivo/pie": "^0.99.0",
     "@stomp/stompjs": "^7.2.1",
     "bootstrap": "^5.3.8",
     "bootstrap-icons": "^1.13.1",
