--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
+    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+    "preview": "vite preview",
+    "start": "serve -s dist -l $PORT"
   },
   "dependencies": {
     "@mdi/js": "^7.4.47",
@@ -27,6 +28,7 @@
     "react-leaflet": "^5.0.0",
     "react-router-dom": "^6.23.1",
     "recharts": "^3.5.1",
+    "serve": "^14.2.5",
     "sockjs-client": "^1.6.1"
   },
   "devDependencies": {
